--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -75,6 +75,16 @@
     width: 250px;
     color: black;
     background-color: white;
+    opacity: 0.9;
+  }
+  .subscribe-input-email {
+    text-align: left;
+  }
+  .subscribe-btn {
+    text-align: left;
+  }
+  .subscribe-input:hover {
+    opacity: 1;
   }
 
   @media (max-width: 1060px) {
