fix: font Satoshi not working

--- a/src/_base.css
+++ b/src/_base.css
@@ -12,7 +12,7 @@
     }
 
     body {
-        font-family: Satoshi, system-ui;
+        font-family: Satoshi-Variable, system-ui;
         margin: 0;
         
     }
