--- a/src/styles/products/product.css
+++ b/src/styles/products/product.css
@@ -92,5 +92,8 @@
     .product-reviews-grid {
       grid-template-columns: 1fr;
     }
+    .item-number-container {
+      width: 100px;
+    }
   }
 }
