--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -144,6 +144,7 @@
   }
   .cart-item-count {
     position: absolute;
+    text-align: center;
     border-radius: 50%;
     width: 15px;
     height: 15px;
