--- a/src/styles/products/product.css
+++ b/src/styles/products/product.css
@@ -22,6 +22,14 @@
     padding-block: 15px;
     text-align: left;
   }
+  .filter-sizes.required {
+    border: 1px solid red;
+  }
+  .error-text {
+    display: block;
+    margin-top: 10px;
+    color: red;
+  }
   .product-tabs-container {
     margin-top: 20px;
     margin-bottom: 50px;
