--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -18,6 +18,9 @@
     grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
   }
+  .product-link {
+    height: min-content;
+  }
   .products-heading {
     display: flex;
     justify-content: space-between;
@@ -107,6 +110,7 @@
   @media (max-width: 760px) {
     .products-list {
       grid-template-columns: 1fr 1fr;
+      grid-auto-flow: row dense;
     }
     .products-number {
       display: none;
